--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
-        android:name=".AppController"
-        android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:requestLegacyExternalStorage="true"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Deskilz"
-        android:networkSecurityConfig="@xml/network_security_config"
-        android:usesCleartextTraffic="true"
-        tools:targetApi="m">
+        android:name=".AppController">
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
@@ -29,7 +19,7 @@
             android:name=".ui.activity.BaseActivity"
             android:screenOrientation="portrait"
             android:exported="true">
-            
+
         </activity>
 
         <service
